# ghc-load-slow

./: README.md  cabal.project  flake.nix
src/exe/: CopyGHC.hs  CopyGHCByteCodeLinker.hs  CopyGHCLinker.hs  CopyGHCRuntimeInterp.hs  Main.hs  gls-exe.cabal
src/platform/: GLS_Platform.hs  gls-platform.cabal
