cabal-version:       3.0
name:                gls-exe
version:             0

executable gls-exe
  main-is: Main.hs
  other-modules: CopyGHC CopyGHCLinker CopyGHCByteCodeLinker CopyGHCRuntimeInterp
  build-depends:
    base,
    text,
    directory,
    filepath,
    optparse-applicative,
    ghc,
    ghci,
    ghc-boot,
    template-haskell,
    array,
    exceptions,
    containers,
    binary,
    bytestring,
    unix,
    process,
    ghc-heap,
    scientific
  build-tool-depends: happy:happy
  default-language: GHC2021
  ghc-options: -threaded -Wall -Wno-unused-do-bind -Wno-unticked-promoted-constructors
  ghc-options: -debug
